# kuavp-robot-deploy

./: .gitignore  readme.md
docker/: Dockerfile  build.sh  run.sh
installed/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
installed/include/humanoid_estimation/: FromTopiceEstimate.h  LinearKalmanFilter.h  StateEstimateBase.h
installed/include/humanoid_interface/: HumanoidInterface.h
installed/include/humanoid_interface/common/: ModelSettings.h  Types.h
installed/include/humanoid_interface/gait/: MotionPhaseDefinition.h
installed/include/humanoid_interface_drake/common/: kuavo_settings.h
installed/include/kuavo_solver/: ankle_solver.h
installed/lib/pkgconfig/: hardware_node.pc  humanoid_estimation.pc  humanoid_interface.pc  humanoid_interface_drake.pc  humanoid_wbc.pc  kuavo_solver.pc
installed/share/hardware_node/: package.xml
installed/share/humanoid_interface/: package.xml
installed/share/humanoid_interface/cmake/: humanoid_interface-msg-extras.cmake  humanoid_interface-msg-paths.cmake  humanoid_interfaceConfig.cmake
installed/share/humanoid_interface/config/command/: reference.info
installed/share/humanoid_interface/config/mpc/: task copy.info  task.info  task_with_arm.info
installed/share/humanoid_interface/config/rl/: rl_param.info  rl_param_with_arm.info
installed/share/humanoid_interface/launch/: rosbag_nodelet.launch  rosbag_nodelet_player.launch
installed/share/kuavo_solver/: package.xml
src/humanoid-control/: README.md
src/humanoid-control/humanoid_common/: CMakeLists.txt  package.xml
src/humanoid-control/humanoid_controllers/: CMakeLists.txt  package.xml
src/humanoid-control/humanoid_controllers/config/kuavo_v11/command/: reference.info
src/humanoid-control/humanoid_controllers/config/kuavo_v11/mpc/: task.info
src/humanoid-control/humanoid_controllers/config/kuavo_v11/rl/: skw_rl_param.info
src/humanoid-control/humanoid_controllers/config/kuavo_v30/rl/: rl_param.info
src/humanoid-control/humanoid_controllers/config/kuavo_v32/mpc/: task.info
src/humanoid-control/humanoid_controllers/config/kuavo_v32/rl/: rl_param.info
src/humanoid-control/humanoid_controllers/config/kuavo_v40/command/: gait.info  reference.info
src/humanoid-control/humanoid_controllers/config/kuavo_v40/mpc/: task.info
src/humanoid-control/humanoid_controllers/config/kuavo_v40/rl/: rl_param.info  walk_rl_param.info
src/humanoid-control/humanoid_controllers/config/kuavo_v42/rl/: rl_param.info  skw_rl_param.info
src/humanoid-control/humanoid_controllers/config/kuavo_v44/command/: reference.info
src/humanoid-control/humanoid_controllers/config/kuavo_v44/rl/: rl_param.info
src/humanoid-control/humanoid_controllers/config/kuavo_v45/rl/: zyc_rl_param.info
src/humanoid-control/humanoid_controllers/config/kuavo_v46/mpc/: task.info
src/humanoid-control/humanoid_controllers/config/kuavo_v46/rl/: skw_rl_param.info
src/humanoid-control/humanoid_controllers/config/kuavo_v50/mpc/: task.info
src/humanoid-control/humanoid_controllers/config/kuavo_v50/rl/: rl_param.info
src/humanoid-control/humanoid_controllers/include/humanoid_controllers/: humanoidController.h
src/humanoid-control/humanoid_controllers/launch/: load_kuavo_mujoco_sim.launch  load_kuavo_real.launch  robot_version_manager.launch
src/humanoid-control/humanoid_controllers/launch/joy/: bt2pro.json  joy_control_bt.launch  joy_control_h12.launch
src/humanoid-control/humanoid_controllers/model/networks/: 30_model_trot_1119.onnx  40_model_walk_1218.onnx  42_model_jog_1202.onnx  42_model_skw_0106.onnx  42_model_skw_0107.onnx  42_model_skw_0208_fixslip.onnx  44_model_jog_1204.onnx  model_250.onnx  policy_0.onnx  policy_1.onnx  policy_2.onnx  policy_5.onnx
src/humanoid-control/humanoid_controllers/src/: controllerNodelet.cpp  humanoidController.cpp  humanoidController.cpp.bak
src/kuavo_assets/scripts/: update_mass.sh
src/kuavo_monitor/: CMakeLists.txt  package.xml
src/kuavo_monitor/include/kuavo_monitor/: kuavo_monitor.h
src/kuavo_monitor/src/: kuavo_monitor.cpp
src/kuavo_msgs/: CMakeLists.txt
src/mujoco/launch/: defaultQpos.yaml  mujoco_sim.launch  nodelet.launch  nodelet_with_arm.launch
src/mujoco/src/: mujoco_node.cc
src/ocs2/ocs2_robotic_tools/: CMakeLists.txt
(+66 files in other folders)
