<?xml version="1.0"?>
<package format="2">
  <name>humanoid_interface</name>
  <version>0.0.1</version>
  <description>The humanoid_interface package</description>

  <maintainer email="xuejl2001@mail.ustc.edu.cn">Jialong Xue</maintainer>

  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rosgraph_msgs</depend>
  <depend>nodelet</depend>
  <depend>roslib</depend>
  <depend>humanoid_interface_drake</depend>
  <depend>humanoid_common</depend>
  <depend>ocs2_pinocchio_interface</depend>
  <depend>ocs2_centroidal_model</depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <export>
        <nodelet plugin="${prefix}/plugins/nodelet_rosbag.xml" />
        <nodelet plugin="${prefix}/plugins/nodelet_rosbag_player.xml" />
  </export>
</package>
